--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "files": ["backupRotation.timer", "backupRotation.service"],
     "main": "backupRotation.sh",
     "scripts": {
-        "update": "npm version patch && npm publish && echo TODO PKGBUILD update",
+        "update": "npm version patch && npm publish",
         "updateDocumentation": "documentationWebsite --log-level info"
     },
     "devDependencies": {
