Update gitignore pattern.

--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ build
 dist
 target
 *Bundle.*
+*.bundle.*
 *.compiled.*
 *.compiled
 *.dll-manifest.json
@@ -148,7 +149,7 @@ __pycache__
 *.crdownload
 
 # Project specific
-*.js
+# ...
 # region vim modline
 # vim: set tabstop=4 shiftwidth=4 expandtab:
 # vim: foldmethod=marker foldmarker=region,endregion:
